fix: destination's image not showing spinner on loading

--- a/src/pages/Destination/Destination.module.css
+++ b/src/pages/Destination/Destination.module.css
@@ -18,7 +18,8 @@ div.destinationContainer {
   margin-inline-end: 0.6em;
 }
 
-.destinationImg {
+.destinationImgContainer {
+  position: relative;
   width: clamp(10.937rem, 40vw, 27.812rem);
   height: clamp(10.937rem, 40vw, 27.812rem);
 }
